fix: info section cole gap

--- a/styles/home.css
+++ b/styles/home.css
@@ -230,6 +230,10 @@ main {
     margin-right: -2rem;
 }
 
+.info-section.cole img {
+    margin-bottom: -6rem;
+}
+
 
 
 /* lloyd */
